force-app/main/default/objects/CS_DaysToExpiration__c/CS_DaysToExpiration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Days to Expiration</label>
</CustomObject>