force-app/main/default/objects/CS_DaysToExpiration__c/fields/NumberOfDays__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDays__c</fullName>
    <label>Numero giorni</label>
    <length>3</length>
    <type>Text</type>
</CustomField>