force-app/main/default/objects/CS_DaysToExpiration__c/fields/QueryLimit__c.field-meta.xml
<CustomField>
    <fullName>QueryLimit__c</fullName>
    <label>Query Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>